--- a/repoprovas-back/package.json
+++ b/repoprovas-back/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest -i"
   },
   "keywords": [
     "test, professors, college"
@@ -18,23 +18,32 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
     "prisma": "^4.1.0",
+    "supertest": "^6.2.4",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "-": "0.0.1",
     "@prisma/client": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/pg": "^8.6.5",
+    "D": "^1.0.0",
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1"
   }
 }
