--- a/repoprovas-back/package.json
+++ b/repoprovas-back/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node index.ts",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest -i"
+    "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i"
   },
   "keywords": [
     "test, professors, college"
