--- a/repoprovas-back/package.json
+++ b/repoprovas-back/package.json
@@ -8,12 +8,16 @@
     "dev": "ts-node index.ts",
     "test": "dotenv -e .env.test prisma migrate dev && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts -i"
+  },
   "keywords": [
     "test, professors, college"
   ],
   "author": "Gleison Moura",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
@@ -29,6 +33,7 @@
     "-": "0.0.1",
     "@prisma/client": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/faker": "^6.6.9",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/pg": "^8.6.5",
@@ -40,6 +45,7 @@
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "faker": "^6.6.6",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
